<resources>
    <string name="app_name">AndroidUserInput</string>
    <string name="quantity">Quantity</string>
    <string name="orderButton">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="zero_dolar">$0</string>
    <string name="plus">+</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
</resources>
